--- a/sheyna-watkins/bethrevisbio.html
+++ b/sheyna-watkins/bethrevisbio.html
@@ -57,12 +57,13 @@
       <ol>
         <li>Beth’s favorite TV show is <em>Firefly</em>, followed closely
           by <em>Doctor Who</em>.</li>
-        <li>She names her pets after her favorite characters. Her current
-          dog is named Sirius, after Sirius Black, Harry  Potter’s godfather.</li>
+        <li>She names her pets after her favorite characters. Her
+          current dog is named Sirius, after Sirius Black, Harry Potter’s
+          godfather.</li>
         <li>Her favorite color is gray. Boring, but unique.</li>
         <li>Beth is currently in a race with her mother to visit the most
-          states and countries. Her mother has 49 states and  Beth only has
-          40, but Beth has 13 countries and her mother only has 8.</li>
+          states and countries. Her mother has 49 states and  Beth only
+          has 40, but Beth has 13 countries and her mother only has 8.</li>
         <li>Beth worked as a teacher before she became a writer. She often
           kills off former students in her novels–and they love it.</li>
 
@@ -85,39 +86,45 @@
     <article>
       <h2>Biography:</h2>
 
-      <p><a href="">Beth Revis</a> is the New York Times, Publisher’s Weekly,
-        and IndieBound bestselling author of the <a href="">Across the Universe
-        series(Razorbill/Penguin )</a>, as well as several in-world short
-        stories published in various anthologies. The books are currently
-        <a href="">available in more than 20 languages</a>.</p>
+      <p><a href="">Beth Revis</a> is the New York Times, Publisher’s
+        Weekly, and IndieBound bestselling author of the <a href="">
+        Across the Universe series(Razorbill/Penguin )</a>, as well as
+        several in-world short stories published in various anthologies.
+        The books are currently <a href="">available in more than 20
+        languages</a>.</p>
 
       <img src="" alt="beth photo3" />
 
-      <p>The Across the Universe books blend mystery with science fiction as
-        they follow the voyage of a generation spaceship to a new world fraught
-        with danger. The first book in the trilogy, <a href="">Across the
-        Universe</a>, is a “cunningly executed thriller” according to Booklist,
-        and the second book, <a href="">A Million Suns</a>, was hailed by the
-        <cite><a href="">LA Times</a></cite> as “a fast-paced, action-packed follow-up.”
-        Shades of Earth, the final volume, was called a “tense and delicious
-        ride” by <cite>The Examiner</cite>.</p>
+      <p>The Across the Universe books blend mystery with science fiction
+        as they follow the voyage of a generation spaceship to a new world
+        fraught with danger. The first book in the trilogy, <a href="">
+        Across the Universe</a>, is a “cunningly executed thriller”
+        according to Booklist, and the second book, <a href="">A Million
+        Suns</a>, was hailed by the <cite><a href="">LA Times</a></cite>
+        as “a fast-paced, action-packed follow-up.” Shades of Earth, the
+        final volume, was called a “tense and delicious ride” by <cite>
+        The Examiner</cite>.</p>
 
-      <p>Across the Universe was selected as a YALSA Teen Top Ten novel, recipient
-        of the Seal of Excellence and the Futuristic Novel of the Year Award from
-        Romantic Times, long-listed for the Carnegie Medal, and featured on several
-        state reading lists. The second book in the trilogy was selected as a Kirkus
-        Best of 2012 novel and a Best Book of 2012 from Wired Magazine, and the
-        third book was featured as a Book of the Month from Seventeen Magazine and
-        an Indigo Must-Read Novel.</p>
+      <p>Across the Universe was selected as a YALSA Teen Top Ten novel,
+        recipient of the Seal of Excellence and the Futuristic Novel of the
+        Year Award from Romantic Times, long-listed for the Carnegie Medal,
+        and featured on several state reading lists. The second book in the
+        trilogy was selected as a Kirkus Best of 2012 novel and a Best Book
+        of 2012 from Wired Magazine, and the third book was featured as a
+        Book of the Month from Seventeen Magazine and an Indigo Must-Read
+        Novel.</p>
 
-      <p>A former teacher, Beth lives in rural North Carolina with her husband and
-        dog. Currently, she is working on a new science fiction trilogy title for
-        self publication and two forthcoming novels for Penguin/Razorbill.</p>
+      <p>A former teacher, Beth lives in rural North Carolina with her
+        husband and dog. Currently, she is working on a new science
+        fiction trilogy title for self publication and two forthcoming
+        novels for Penguin/Razorbill.</p>
 
-      <p><a href="">Blog</a> | <a href="">Twitter</a> | <a href="">Facebook</a> |
-        <a href="">GoodReads</a></p>
+      <p><a href="">Blog</a> | <a href="">Twitter</a> | <a href="">
+        Facebook</a> | <a href="">GoodReads</a></p>
 
-      <p>Beth is represented by Merrilee Heifetz at <a href="">Writers House</a>.</p>
+      <p>Beth is represented by Merrilee Heifetz at <a href="">Writers
+        House</a>.</p>
+
     </article>
 
     <hr />
@@ -153,9 +160,9 @@
     <section>
       <h2>Subscribe to my newsletter</h2>
 
-      <p>Never miss a thing--subscribe to my newsletter! Newsletters are delivered
-        monthly and feature news and events from Beth, as well as interesting and
-        fun sci fi articles!</p>
+      <p>Never miss a thing--subscribe to my newsletter! Newsletters
+        are delivered monthly and feature news and events from Beth,
+        as well as interesting and fun sci fi articles!</p>
       <p><a href="">Click here to see a sample.</a></p>
       <button>Subscribe</button>
     </section>
