Add section around bio blurb.

--- a/sheyna-watkins/bethrevisbio.html
+++ b/sheyna-watkins/bethrevisbio.html
@@ -41,14 +41,16 @@
 
   <main>
 
-    <h2>Blurb Bio:</h2>
+    <section>
+      <h2>Blurb Bio:</h2>
 
-    <img src="" alt="beth photo1" />
-    <p>Beth Revis is the <em>NY Times</em> bestselling author of the
-      Across the Universe series. The complete trilogy is now available
-      in more than 20 languages. A native of North Carolina, Beth is
-      currently working on a new science fiction novel for teens,
-      <em>The Body Electric</em>, which releases October 6, 2014.</p>
+      <img src="" alt="beth photo1" />
+      <p>Beth Revis is the <em>NY Times</em> bestselling author of the
+        Across the Universe series. The complete trilogy is now available
+        in more than 20 languages. A native of North Carolina, Beth is
+        currently working on a new science fiction novel for teens,
+        <em>The Body Electric</em>, which releases October 6, 2014.</p>
+    </section>
 
     <hr />
 
