Added hidden h2 at the top of the nav

--- a/sheyna-watkins/bethrevisbio.html
+++ b/sheyna-watkins/bethrevisbio.html
@@ -19,6 +19,7 @@
         beth revis
       </h1>
       <nav>
+        <h2 hidden>Site Navigation</h2>
         <ul>
           <li><a href=""><img src="" />HOME</a></li>
           <li><a href=""><img src="" />BOOKS</a></li>
