Added video, form, input

--- a/evan-wilkinson/semanticrebuild.html
+++ b/evan-wilkinson/semanticrebuild.html
@@ -12,10 +12,13 @@
     <main>
       <section>
         <h1>Learn to code interactively, for free.</h1>
+        <form>Signup</form>
+        <input>Email</input>
       </section>
       <section>
         <h2>How can coding help you?</h2>
         <p>Hear how Tommy...</p>
+        <video>YouTube.com</video>
       </section>
       <section>
         <h2>Codecademy Stories</h2>
