Corrected headings, switched back articles and sections

--- a/evan-wilkinson/semanticrebuild.html
+++ b/evan-wilkinson/semanticrebuild.html
@@ -10,36 +10,36 @@
       <button>SIGN UP</button>
     </header>
     <main>
-      <article>
+      <section>
         <h1>Learn to code interactively, for free.</h1>
         <form>Signup</form>
         <input>Email</input>
-      </article>
-      <article>
-        <h2>How can coding help you?</h2>
+      </section>
+      <section>
+        <h1>How can coding help you?</h2>
         <p>Hear how Tommy...</p>
         <video>YouTube.com</video>
-      </article>
-      <article>
-        <h2>Codecademy Stories</h2>
-        <section>
+      </section>
+      <section>
+        <h1>Codecademy Stories</h1>
+        <article>
           <img>Sam's picture</img>
-          <h4>Sam Fellig</h4>
+          <h1>Sam Fellig</h1>
           <p>New York, US</p>
           <p>From a non-technical guy...</p>
-        </section>
-        <section>
+        </article>
+        <article>
           <img>Liz's picture</img>
           <h4>Liz Beigle-Bryant</h4>
           <p>Seattle</p>
           <p>Liz Beigle-Bryant was laid off...</p>
-        </section>
-        <section>
+        </article>
+        <article>
           <img>Joah and Haley's picture</img>
           <h4>Joah Gerstenberg and Haley Higgins</h4>
           <p>Texas</p>
           <p>When Joah Gerstenberg, 17...</p>
-        </section>
+        </article>
         <a href="http://www.codecademy.com/stories">Read more stories</a>
         <hr />
         <p>Join over</p>
@@ -50,32 +50,34 @@
     <footer>
       <img>Codecademy logo</img>
       <p>Teaching the world how to code</p>
-      <ul>
-        <li>About Us</li>
-        <li>We're hiring</li>
-        <li>Blog</li>
-      </ul>
-      <h4>Learn to Code</h4>
-      <ul>
-        <li>Make a Website<li>
-        <li>PHP</li>
-      </ul>
-      <h4>Other Programs</h4>
-      <ul>
-        <li>Schools</li>
-        <li>Studies</li>
-      </ul>
-      <h4>Follow Us</h4>
-      <ul>
-        <li>Twitter</li>
-        <li>Blog</li>
-      <ul>
-      <hr />
-      <ul>
-        <li>Help</li>
-        <li>Privacy Policy</li>
-        <li>Terms</li>
-      </ul>
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>We're hiring</li>
+          <li>Blog</li>
+        </ul>
+        <h1>Learn to Code</h4>
+        <ul>
+          <li>Make a Website<li>
+          <li>PHP</li>
+        </ul>
+        <h1>Other Programs</h4>
+        <ul>
+          <li>Schools</li>
+          <li>Studies</li>
+        </ul>
+        <h1>Follow Us</h4>
+        <ul>
+          <li>Twitter</li>
+          <li>Blog</li>
+        <ul>
+        <hr />
+        <ul>
+          <li>Help</li>
+          <li>Privacy Policy</li>
+          <li>Terms</li>
+        </ul>
+      </nav>
       <p>Made in NYC c 2014 Codecademy</p>
       <p>English</p>
     </footer>
